Fix alignment on map items.

--- a/scss/game.scss
+++ b/scss/game.scss
@@ -295,11 +295,11 @@ a, a:visited {
 .map {
   width: 32rem;
   margin: 0 auto;
+  padding: .5rem;
   background: $map-color;
 }
 
 .backpack {
-  padding: .5rem;
   flex-grow: 1;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -397,7 +397,7 @@ a, a:visited {
   flex-flow: row wrap;
   align-content: flex-start;
   width: 4.8rem;
-  margin: .5rem .5rem 0 0;
+  margin-top: .5rem;
 }
 
 #used-items {
